feat : ui Planner 구현 및 서버 수정