@@ -1,5 +1,6 @@
 package com.flab.quicktogether.timeplan.presentation.dto;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.flab.quicktogether.timeplan.domain.value_type.RegularTimeBlock;
 import com.flab.quicktogether.timeplan.domain.weekly_available_plan.WeeklyAvailablePlan;
 import lombok.EqualsAndHashCode;
@@ -11,13 +12,16 @@ import java.time.LocalTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @EqualsAndHashCode
 @ToString
 public class AvailablePlanCreateRequestDto {
-
+    @JsonProperty("time_zone")
     private String timeZone;
+
+    @JsonProperty("available_plans")
     private List<RegularTimeBlock> availablePlans = new ArrayList<>();
 
     protected AvailablePlanCreateRequestDto() {
@@ -35,7 +39,7 @@ public class AvailablePlanCreateRequestDto {
                     return RegularTimeBlock.asCommonTime(dayOfWeek, startTime, endTime, localtimeZone)
                             .stream();
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         return new WeeklyAvailablePlan(memberId, regularTimeBlocks);
     }
